[package]
name = "osc-cost"
version = "0.5.2"
edition = "2021"
authors = ["OpenSource Team <opensource@outscale.com>"]
license = "BSD-3-Clause"
description = "osc-cost helps measuring Outscale infrastructure costs"
repository = "https://github.com/outscale/osc-cost"
readme = "docs/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive"] }
env_logger = "0.9.3"
http = "0.1.21"
lazy_static = "1.4.0"
log = "0.4.17"
outscale_api = { version = "1.2.0", features = ["rustls-tls"], default-features = false }
rand = "0.8.5"
regex = "1.6.0"
secrecy = "0.8.0"
serde = "1.0.147"
serde_json = "1.0.87"
aws-credential-types = { version = "0.53.0", features = ["hardcoded-credentials"] }
aws-config = "0.53.0"
aws-sdk-s3 = "0.23.0"
tokio = { version = "1", features = ["full"] }
icu_locid = "1.0.0"
spreadsheet-ods = "0.15.0"
comfy-table = "6.1.4"
prometheus = "0.13.3"
tokio-stream = "0.1.12"
strum_macros = "0.24.3"
strum = "0.24.1"
