[package]
name = "osc-cost"
version = "0.6.0"
edition = "2021"
authors = ["Tooling Team <opensource@outscale.com>"]
license = "BSD-3-Clause"
description = "osc-cost helps measuring OUTSCALE infrastructure costs"
repository = "https://github.com/outscale/osc-cost"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.22"
clap = { version = "~4.5", features = ["derive"] }
env_logger = "0.11.8"
http = "^1.1"
lazy_static = "1.5.0"
log = "^0.4"
outscale_api = { version = "1.17.0", features = ["rustls-tls"], default-features = false }
rand = "0.8.5"
regex = "1.6.0"
secrecy = "^0.10"
serde = "^1.0"
serde_json = "^1.0"
aws-credential-types = { version = "1.2.8", features = ["hardcoded-credentials"] }
aws-config = "1.8.10"
aws-sdk-s3 = "1.110.0"
tokio = { version = "1", features = ["full"] }
icu_locale_core = "^2.0"
spreadsheet-ods = "1.0.1"
comfy-table = "6.1.4"
prometheus = "0.14.0"
tokio-stream = "0.1.12"
strum_macros = "0.24.3"
strum = "0.24.1"
axum = { version = "0.8.7", features = ["json"] }

[[bin]]
name = "osc-cost"
path = "src/cli.rs"

[[bin]]
name = "osc-cost-exporter"
path = "src/server.rs"
