[package]
name = "osc-cost"
version = "0.7.0"
edition = "2021"
authors = ["Tooling Team <opensource@outscale.com>"]
license = "BSD-3-Clause"
description = "osc-cost helps measuring OUTSCALE infrastructure costs"
repository = "https://github.com/outscale/osc-cost"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.22"
clap = { version = "~4.6.0", features = ["derive"] }
env_logger = "0.11.8"
http = "^1.1"
lazy_static = "1.5.0"
log = "^0.4"
outscale_api = { version = "1.17.0", features = ["rustls-tls"], default-features = false }
rand = "0.8.5"
regex = "1.6.0"
secrecy = "^0.10"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
aws-credential-types = { version = "1.2.8", features = ["hardcoded-credentials"] }
aws-config = "1.8.10"
aws-sdk-s3 = "1.110.0"
tokio = { version = "1", features = ["full"] }
icu_locale_core = "^2.0"
spreadsheet-ods = "1.0.1"
comfy-table = "7.0.0"
prometheus = "0.14.0"
tokio-stream = "0.1.12"
strum_macros = "0.24.3"
strum = "0.24.1"
axum = { version = "0.8.7", features = ["json"] }

[[bin]]
name = "osc-cost"
path = "src/cli.rs"

[[bin]]
name = "osc-cost-exporter"
path = "src/server.rs"

[workspace.lints.clippy]
# Don't Panic - prevent panics from unwraps and unsafe slicing or indexing
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"
# Optional - see post for caveats
# expect_used = "warn"
# arithmetic_side_effects = "warn"

# Don't Fail Silently - prevent dropped futures and swallowed errors
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Don't Do Bad Async Stuff - prevent deadlocks and concurrency bugs
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"  # only relevant on editions before 2024
large_futures = "warn"

# Don't Do Unsafe Things with Memory
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

# Don't Do Potentially Incorrect Things with Numbers
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
# Optional - these effectively force you to document numeric invariants
# cast_possible_wrap = "warn"
# cast_precision_loss = "warn"
# cast_possible_truncation = "warn"

# Don't Do Bad Things That are Easy to Avoid
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"

# Don't `allow` Your Way Around These Lints - every suppression must be
# a deliberate #[expect(..., reason = "…")] rather than a silent #[allow]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
